--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mocha": "^5.0.4"
   },
   "scripts": {
-    "test": "mocha ./src/**/*.spec.js",
-    "test:watch": "mocha --watch ./src/**/*.spec.js"
+    "test": "mocha ./src/**/\\*.spec.js",
+    "test:watch": "mocha --watch ./src/**/\\*.spec.js"
   }
 }
